// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Event component matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventWrapper
    initialState={
      Object {
        "eventItemList": Object {},
        "eventItems": Array [],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": undefined,
      "value": Object {
        "addEventItem": [Function],
        "eventItemList": Object {},
        "eventItems": Array [],
        "getEventItem": [Function],
        "getEventItems": [Function],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
    "ref": null,
    "rendered": null,
    "type": Object {
      "$$typeof": Symbol(react.provider),
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": [Circular],
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_currentValue2": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_defaultValue": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": undefined,
        "value": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
      "ref": null,
      "rendered": null,
      "type": Object {
        "$$typeof": Symbol(react.provider),
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": [Circular],
          "_calculateChangedBits": null,
          "_changedBits": 0,
          "_changedBits2": 0,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "addEventItem": [Function],
            "eventItemList": Object {},
            "eventItems": Array [],
            "getEventItem": [Function],
            "getEventItems": [Function],
            "limit": 0,
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
          "_currentValue2": Object {
            "addEventItem": [Function],
            "eventItemList": Object {},
            "eventItems": Array [],
            "getEventItem": [Function],
            "getEventItems": [Function],
            "limit": 0,
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
          "_defaultValue": Object {
            "addEventItem": [Function],
            "eventItemList": Object {},
            "eventItems": Array [],
            "getEventItem": [Function],
            "getEventItems": [Function],
            "limit": 0,
            "page": 0,
            "pageTotal": 0,
            "total": 0,
            "totalPages": 0,
          },
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render EventContext matches the snapshot 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <div>
    <Context.Consumer>
      [Function]
    </Context.Consumer>
  </div>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": <div>
      <p />
    </div>,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Context.Consumer>
        [Function]
      </Context.Consumer>,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": <p />,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": Array [
          undefined,
        ],
        "type": "p",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": <div>
        <p />
      </div>,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Context.Consumer>
          [Function]
        </Context.Consumer>,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <p />,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": Array [
            undefined,
          ],
          "type": "p",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render eventConsumer matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventConsumer />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "Consumer": [Circular],
      "Provider": Object {
        "$$typeof": Symbol(react.provider),
        "_context": [Circular],
      },
      "_calculateChangedBits": null,
      "_changedBits": 0,
      "_changedBits2": 0,
      "_currentRenderer": null,
      "_currentRenderer2": null,
      "_currentValue": Object {
        "addEventItem": [Function],
        "eventItemList": Object {},
        "eventItems": Array [],
        "getEventItem": [Function],
        "getEventItems": [Function],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
      "_currentValue2": Object {
        "addEventItem": [Function],
        "eventItemList": Object {},
        "eventItems": Array [],
        "getEventItem": [Function],
        "getEventItems": [Function],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
      "_defaultValue": Object {
        "addEventItem": [Function],
        "eventItemList": Object {},
        "eventItems": Array [],
        "getEventItem": [Function],
        "getEventItems": [Function],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_changedBits": 0,
        "_changedBits2": 0,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_currentValue2": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
        "_defaultValue": Object {
          "addEventItem": [Function],
          "eventItemList": Object {},
          "eventItems": Array [],
          "getEventItem": [Function],
          "getEventItems": [Function],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Render eventProvider matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <EventProvider />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <Elem />,
      "initialState": Object {
        "eventItemList": Object {},
        "eventItems": Array [],
        "limit": 0,
        "page": 0,
        "pageTotal": 0,
        "total": 0,
        "totalPages": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Elem />,
        "initialState": Object {
          "eventItemList": Object {},
          "eventItems": Array [],
          "limit": 0,
          "page": 0,
          "pageTotal": 0,
          "total": 0,
          "totalPages": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
